--- a/index.html
+++ b/index.html
@@ -40,31 +40,36 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class=" w-100" src="jumbo.png" alt="First slide">
-                <div class="carousel-caption ">
-                    <img src="jumbologo.png" alt="Logo" class="slider-logo">
-                    <h5>Built on Trust, Driven by Excellence.</h5>
+                <div class="carousel-caption mb-20" >
+                    
+                    <h1 >Built on Trust, Driven by Excellence.</h1>
                     <p>Book your appointment today.</p>
-                    <a class="btn btn-primary" href="#" role="button">Book Now</a>
+                    <a class="btn btn-primary mt-20" href="#" role="button">Book Now</a>
                 </div>
             </div>
             <!-- Repeat for the next three slides -->
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
                 <img class=" w-100" src="jumbo2.jpg" alt="Second slide">
                 <div class="carousel-caption ">
                     <img src="jumbologo.png" alt="Logo" class="slider-logo">
                 </div>
-            </div>
+            </div> -->
             <!-- Continue for slides 3 and 4 -->
             <div class="carousel-item">
                 <img class=" w-100" src="jumbo3.jpg" alt="Third slide">
                 <div class="carousel-caption ">
-                    <img src="jumbologo.png" alt="Logo" class="slider-logo">
+                    <h1>Built on Trust, Driven by Excellence.</h1>
+                    <p>Book your appointment today.</p>
+                    <a class="btn btn-primary" href="#" role="button">Book Now</a>
+                    
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="w-100" src="jumbo4.jpg" alt="Fourth slide">
                 <div class="carousel-caption ">
-                    <img src="jumbologo.png" alt="Logo" class="slider-logo">
+                    <h1>Built on Trust, Driven by Excellence.</h1>
+                    <p>Book your appointment today.</p>
+                    <a class="btn btn-primary" href="#" role="button">Book Now</a>
                 </div>
             </div>
         </div>
